# cpp-crypto

./: LICENSE  Makefile  README.md  build-linux.sh  build_docker.sh  build_linux_docker.sh  build_src.sh  docker-compose-2-consumers.yml  docker-compose-a.yml  docker-compose-test.yml  docker-compose.yml  install_deps.sh  launch-linux-dev.sh  run-build-all.sh  run-build-fastfloat.sh  run-build-ixwebsocket.sh  run-build-nljson.sh  run-build-simd.sh  run-linux.sh  run_docker_compose.sh  setup_and_run.sh
binance/: CMakeLists.txt  binance.cpp  binance_main.cpp  build_local.sh  main.cpp  msub.cpp  run_cmd.sh
binance/book_ticker/: book_ticker.hpp  book_ticker_parser.hpp  book_ticker_queue.hpp  endpoint_config.hpp  ohlc_bar.hpp  parse_config.hpp  price_calc.hpp  setup_websocket.hpp  stream_config.hpp  symbol_id_map.hpp  ticker_utils.hpp  time_utils.hpp
binance/config/: config.json
binance/tests/: test_json_times.cpp  test_python_parser.py  test_simd_parser.cpp
book-ticker-simd/: BookTicker.hpp  BookTickerParser.hpp  BookTickerParserNL.hpp  CMakeLists.txt  main.cpp  msub.cpp  run-build.sh  test.json  test_clock_time.cpp  test_json_times.cpp  test_lookup.cpp  test_simd_parser.cpp  time_utils.hpp
book-ticker-simd/book_ticker/: BookTickerParser.hpp
book-ticker-simd/tests/: test_simd_parser.cpp
book-ticker-test/: CMakeLists.txt  main.cpp  run-build.sh
cpp-docker/: CMakeLists.txt  Dockerfile  cmds  test.cpp
docker/cpp-dev/: Dockerfile
docker/full-dev/: Dockerfile
docker/runtime/: Dockerfile
docker/webserver/: Dockerfile
frontend/: cmds  package-lock.json  vite.config.ts
frontend/src/: App.tsx  StatusDashboard.tsx
frontend/src/components/ui/: card.tsx
linux-docker/: Dockerfile  build.sh  run-docker.sh
linux_docker/: Dockerfile
scripts/: install_deps.sh  setup_and_run.sh
scripts/install/: deps_install.sh  docker_network.sh
scripts/run/: bootstrap.sh  run_image.sh  run_producer.sh
server/: pyproject.toml
server/app/: main.py  routes.py
src/bars/: bar_aggregator.hpp  bar_aggregator_impl.hpp  bar_report_printer.hpp  ohlc_report.hpp
src/binance/: CMakeLists.txt  binance_main.cpp  build_local.sh  cmdx  mock_binance_main.cpp  mock_producer_main.cpp  run_cmd.sh
src/binance/book_ticker/: book_ticker.hpp  book_ticker_parser.hpp  book_ticker_parser_nl.hpp  setup_websocket.hpp  symbol_id_map.hpp
src/binance/config/: config.json  stream_config.json  symbols.json
src/binance/tests/: test_clock_time.cpp  test_json_times.cpp  test_lookup.cpp  test_simd_parser.cpp
src/consumer/: CMakeLists.txt  build_local.sh  consumer_main.cpp
src/receiver/: CMakeLists.txt  consumer_main.cpp  consumer_push.cpp
src/symbols/: benchmark.cpp  run.sh
symbols/: README.md  benchmark.cpp  build_local.sh  coingecko.py  dict_benchmark.py  filter_symbols.py  generate_symbol_files.py  pyproject.toml
test_data/: sample.json
